--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,5 +7,5 @@
 </ul>
 
 <p>
-  <a href="/places/new" class="btn btn-primary">New place</a>
+  <a href="/places/new" class="btn btn-success">New place</a>
 </p>
