--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,10 @@
           </ul>
           <ul class="d-flex navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/sessions/new">Login</a>
+              <a class="nav-link active btn btn-light" aria-current="page" href="/sessions/new">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/users/new">Sign up</a>
+              <a class="nav-link active btn btn-light" aria-current="page" href="/users/new">Sign up</a>
             </li>
           </ul>
 
