--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,11 @@
       <%= flash[:notice] %>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
         <img src="/assets/images/journal-logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-        My Travel Journal
+        Travel Journal
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -30,12 +30,12 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
           </ul>
-          <ul class="d-flex navbar-nav mb-2 mb-lg-0">
+          <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active btn btn-light" aria-current="page" href="/sessions/new">Login</a>
+              <a class="nav-link active btn btn-dark" aria-current="page" href="/sessions/new">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active btn btn-light" aria-current="page" href="/users/new">Sign up</a>
+              <a class="nav-link active btn btn-dark" aria-current="page" href="/users/new">Sign up</a>
             </li>
           </ul>
 
