--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
       <%= flash[:notice] %>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
-        <img src="/assets/images/journal-logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="/public/images/journal-logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
         Travel Journal
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,12 +31,18 @@
             </li>
           </ul>
           <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+          
+          <% if @current_user %>
+            <li class="nav-item">Logged in as: <%= @current_user.username %></li>
+            <li class="nav-item"><%= button_to "Logout", "/sessions/logout", method: :delete, class: "nav-link" %></li>
+          <% else %>
             <li class="nav-item">
-              <a class="nav-link active btn btn-dark" aria-current="page" href="/sessions/new">Login</a>
+              <a class="nav-link active btn btn-primary" aria-current="page" href="/sessions/new">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active btn btn-dark" aria-current="page" href="/users/new">Sign up</a>
+              <a class="nav-link active btn btn-primary" aria-current="page" href="/users/new">Logout</a>
             </li>
+          <% end %>
           </ul>
 
         </div>
