--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,9 +8,9 @@
 <% end %>
 
 <p>
-  <a class="btn btn-primary" href="/posts/new?place_id=<%= @place.id %>">New Post</a>
+  <a class="btn btn-success" href="/posts/new?place_id=<%= @place.id %>">New Post</a>
 </p>
 
 <p>
-  <a class="btn btn-primary" href="/places">Back to All Places</a>
+  <a class="btn btn-success" href="/places">Back to All Places</a>
 </p>
