--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,20 +1,24 @@
 <h1>New Post</h1>
 
 <%= form_with model: @post do |form| %>
-  <p>
-    <%= form.label "title" %>
-    <%= form.text_field "title" %>
-  </p>
-  <p>
-    <%= form.label "description" %>
-    <%= form.text_field "description" %>
-  </p>
-  <p>
-    <%= form.label "posted_on" %>
-    <%= form.date_field "posted_on" %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
+  <div class="mb-3">
+    <%= form.label "title", class: "form-label" %>
+    <%= form.text_field "title", class: "form-control" %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label "description", class: "form-label" %>
+    <%= form.text_field "description", class: "form-control" %>
+  </div>
+  
+  <div class="mb-3">
+    <%= form.label "posted_on", class: "form-label" %>
+    <%= form.date_field "posted_on", class: "form-control" %>
+  </div>
+  
+  <div>
+    <%= form.submit "Create post", class: "btn btn-success" %>
+  </div>
+
   <%= form.hidden_field "place_id" %>
 <% end %>
