--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,6 +14,8 @@
     <%= form.password_field "password", class: "form-control" %>
   </div>
   
+  <div>
     <%= form.submit "Sign up", class: "btn btn-success" %>
-  
+  </div>
+
 <% end %>
