--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,16 +1,20 @@
-<h1><%= @place.name %></h1>
+<div class="row">
 
-<h2>My Posts</h2>
-<% for post in @place.posts %>
-  <h3><%= post.title %></h3>
-  <h4><%= post.posted_on %></h4>
-  <p><%= post.description %></p>
-<% end %>
+  <div>
+    <h1><%= "#{@place.name} - My Posts" %></h1>
+  </div>
 
-<p>
-  <a class="btn btn-success" href="/posts/new?place_id=<%= @place.id %>">New Post</a>
-</p>
+  <% for post in @place.posts %>
+  <div class="col-md-4 col-sm-6">
+    <h3><%= post.title %></h3>
+    <h4><%= post.posted_on %></h4>
+    <p><%= post.description %></p>
+  </div>
+  <% end %>
 
-<p>
-  <a class="btn btn-success" href="/places">Back to All Places</a>
-</p>
+  <div class="mb-3">
+    <a class="btn btn-success" href="/posts/new?place_id=<%= @place.id %>">New Post</a>
+    <a class="btn btn-success" href="/places">Back to All Places</a>
+  </div>
+
+</div>
