--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
-          <img src="/public/images/journal-logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+          <img src="" alt="" width="30" height="24" class="d-inline-block align-text-top">
           Travel Journal
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,6 @@
         </div>
       </div>
 
-    
       <%= yield %>
     
     </div>
