--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,6 +7,11 @@
   </div>
 
   <div class="mb-3">
+    <%= form.label "uploaded_image", class: "form-label" %>
+    <%= form.file_field "uploaded_image", accept: "image/png,image/jpg,image/jpeg", class: "form-control" %>
+  </div>
+
+  <div class="mb-3">
     <%= form.label "description", class: "form-label" %>
     <%= form.text_field "description", class: "form-control" %>
   </div>
