--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,11 +1,16 @@
 <h1>Places</h1>
 
-<ul>
-  <% for place in @places %>
-    <li><a href="/places/<%= place.id %>"><%= place.name %></a></li>
-  <% end %>
-</ul>
+<% if @current_user %>
+  <ul>
+    <% for place in @places %>
+      <li><a href="/places/<%= place.id %>"><%= place.name %></a></li>
+    <% end %>
+  </ul>
 
 <div>
   <a href="/places/new" class="btn btn-success">New place</a>
 </div>
+
+<% else %>
+  Please login to see your places! 
+<% end %>
