--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,10 +1,11 @@
-<div class="container">
+<div class="row">
 
   <div>
-    <h1><%= "#{@place.name} - My Posts" %></h1>
+    <h1><%= "#{@place.name} - Posts" %></h1>
+    <a class="btn btn-success mb-3" href="/posts/new?place_id=<%= @place.id %>">New Post</a>
   </div>
 
-  <% for post in @place.posts %>
+  <% for post in @place.posts.where({user_id: @current_user.id})  %>
   <div class="col-md-4 col-sm-6">
     <h3><%= post.title %></h3>
     <h4><%= post.posted_on %></h4>
@@ -18,7 +19,6 @@
   <% end %>
 
   <div class="mb-3">
-    <a class="btn btn-success" href="/posts/new?place_id=<%= @place.id %>">New Post</a>
     <a class="btn btn-success" href="/places">Back to All Places</a>
   </div>
 
