--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
-          <img src="/public/images/journal-logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top image-responsive"></a>
+          <img src="https://static.thenounproject.com/png/375269-200.png" alt="" width="55" height="60" class="d-inline-block align-text-top image-responsive"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -33,7 +33,7 @@
 
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
             <% if @current_user %>
-              <li class="nav-item">Logged in as: <%= @current_user.username %></li>
+              <li class="nav-item mt-3">Logged in as: <%= @current_user.username %></li>
               <li class="nav-link active"><%= button_to "Logout", "/sessions/logout", method: :delete, class: "nav-link btn btn-light" %></li>
             <% else %>
               <li class="nav-item">
